--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://github.com/Bestbest2546/webdepression.git",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
