--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Bestbest2546/Test.git",
+  "homepage": "https://Bestbest2546.github.io/Depression",
   "name": "dpsweb",
   "version": "0.1.0",
   "private": true,
